--- a/Engine/ColorVision.Engine/Services/Devices/Camera/DisplayCamera.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/Camera/DisplayCamera.xaml
@@ -361,6 +361,9 @@
                         </DockPanel>
                     </StackPanel>
 
+                    <StackPanel Margin="0,0,0,3">
+                        <Button  DockPanel.Dock="Right" Grid.Column="1" Margin="5,0,0,0" Content="{x:Static properties:Resources.Video}"  Click="Video1_Click"/>
+                    </StackPanel>
 
                 </StackPanel>
                 <DockPanel Margin="0,0,0,0" >
