--- a/UI/ColorVision.UI.Desktop/ThirdPartyApps/ThirdPartyAppsWindow.xaml
+++ b/UI/ColorVision.UI.Desktop/ThirdPartyApps/ThirdPartyAppsWindow.xaml
@@ -75,6 +75,7 @@
                      ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                      ScrollViewer.VerticalScrollBarVisibility="Auto"
                      MouseDoubleClick="AppsListBox_MouseDoubleClick"
+                     PreviewMouseLeftButtonDown="AppsListBox_PreviewMouseLeftButtonDown"
                      PreviewMouseRightButtonUp="AppsListBox_PreviewMouseRightButtonUp">
                 <ListBox.ItemsPanel>
                     <ItemsPanelTemplate>
