--- a/Engine/ColorVision.Engine/DeskTop/Messages/MessagesListWindow.xaml
+++ b/Engine/ColorVision.Engine/DeskTop/Messages/MessagesListWindow.xaml
@@ -1,13 +1,14 @@
-﻿<Window x:Class="ColorVision.Engine.Messages.MessagesListWindow"
+﻿<Window x:Class="ColorVision.Engine.DeskTop.Messages.MessagesListWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ColorVision.Engine.Messages"
         xmlns:properties="clr-namespace:ColorVision.Engine.Properties"
+        xmlns:local1="clr-namespace:ColorVision.Engine.DeskTop.Messages"
         mc:Ignorable="d"
-        d:DataContext="{d:DesignInstance local:MsgRecordManager}"
-        Title="{x:Static properties:Resources.MsgLogWindow}" Height="720" Background="{StaticResource GlobalBackground}" Width="1280" Initialized="Window_Initialized">
+        d:DataContext="{d:DesignInstance local1:MessagesListManager}"
+        Title="{x:Static properties:Resources.MsgLogWindow}" Height="720" Background="{StaticResource GlobalBackground}" Width="1280" Initialized="Window_Initialized" Closing="Window_Closing">
     <Window.Resources>
         <Style TargetType="{x:Type TextBlock}">
             <Setter Property="Foreground" Value="{DynamicResource GlobalTextBrush}"/>
