--- a/UI/ColorVision.Solution/MultiImageViewer/MultiImageViewer.xaml
+++ b/UI/ColorVision.Solution/MultiImageViewer/MultiImageViewer.xaml
@@ -26,7 +26,7 @@
                 </Grid.RowDefinitions>
                 
                 <!-- 缩略图 -->
-                <Border Grid.Row="0" Background="{DynamicResource GlobalBorderBrush}" 
+                <Border Grid.Row="0" 
                         BorderBrush="{DynamicResource BorderBrush}" BorderThickness="1" CornerRadius="3">
                     <Grid>
                         <Image Source="{Binding Thumbnail}" Stretch="Uniform" Margin="2"
@@ -70,10 +70,8 @@
                 </Grid.ColumnDefinitions>
                 
                 <!-- 小缩略图 -->
-                <Border Grid.Column="0" Background="{DynamicResource GlobalBorderBrush}" 
-                        BorderBrush="{DynamicResource BorderBrush}" BorderThickness="1" 
-                        CornerRadius="2" Margin="2">
-                    <Image Source="{Binding Thumbnail}" Stretch="Uniform" Margin="1"
+                <Border Grid.Column="0" CornerRadius="2" Margin="2" >
+                    <Image Source="{Binding Thumbnail}" Stretch="Uniform"
                            RenderOptions.BitmapScalingMode="HighQuality"/>
                 </Border>
                 
