--- a/UI/ColorVision.Solution/Rbac/LoginWindow.xaml
+++ b/UI/ColorVision.Solution/Rbac/LoginWindow.xaml
@@ -99,7 +99,7 @@
                     <!-- 用户名输入 -->
                     <DockPanel Margin="0,0,0,20">
                         <StackPanel>
-                            <TextBlock Text="{x:Static properties:Resources.Username}" 
+                            <TextBlock Text="{x:Static properties:Resources.UserName}" 
                                        FontSize="13" 
                                        Foreground="#666666"
                                        Margin="0,0,0,8"/>
