--- a/UI/ColorVision.Solution/Download/DownloadWindow.xaml
+++ b/UI/ColorVision.Solution/Download/DownloadWindow.xaml
@@ -23,23 +23,21 @@
 
         <!-- Toolbar -->
         <Grid Margin="5">
-            <ToolBarTray IsLocked="True">
-                <ToolBar Padding="3,2">
-                    <Button x:Name="BtnAddUrl" Content="{x:Static properties:Resources.AddDownload}" Click="BtnAddUrl_Click" Margin="2,0"/>
-                    <Separator Margin="5,0"/>
-                    <Button Content="{x:Static properties:Resources.ClearRecords}" Click="ClearRecords_Click" Margin="2,0"/>
-                    <Button Content="{x:Static properties:Resources.DeleteSelected}" Click="DeleteSelected_Click" Margin="2,0"/>
-                    <Separator Margin="5,0"/>
-                    <TextBlock Text="{x:Static properties:Resources.Search}" VerticalAlignment="Center" Margin="0,0,5,0"/>
-                    <TextBox x:Name="SearchTextBox" Width="200" VerticalAlignment="Center" KeyDown="SearchTextBox_KeyDown"/>
-                    <Button Content="{x:Static properties:Resources.SearchButton}" Click="Search_Click" Margin="5,0,0,0"/>
-                    <Separator Margin="5,0"/>
-                    <Button Content="{x:Static properties:Resources.Refresh}" Click="Refresh_Click" Margin="2,0"/>
-                    <Button Content="{x:Static properties:Resources.OpenDownloadFolder}" Click="OpenDownloadFolder_Click" Margin="2,0"/>
-                    <Separator Margin="5,0"/>
-                    <Button Content="{x:Static properties:Resources.DownloadSettings}" Click="Settings_Click" Margin="2,0"/>
-                </ToolBar>
-            </ToolBarTray>
+            <StackPanel Orientation="Horizontal" >
+                <Button x:Name="BtnAddUrl" Content="{x:Static properties:Resources.AddDownload}" Click="BtnAddUrl_Click" Margin="2,0"/>
+                <Separator Margin="5,0"/>
+                <Button Content="{x:Static properties:Resources.ClearRecords}" Click="ClearRecords_Click" Margin="2,0"/>
+                <Button Content="{x:Static properties:Resources.DeleteSelected}" Click="DeleteSelected_Click" Margin="2,0"/>
+                <Separator Margin="5,0"/>
+                <TextBlock Text="{x:Static properties:Resources.Search}" VerticalAlignment="Center" Margin="0,0,5,0"/>
+                <TextBox x:Name="SearchTextBox" Width="200" VerticalAlignment="Center" KeyDown="SearchTextBox_KeyDown"/>
+                <Button Content="{x:Static properties:Resources.SearchButton}" Click="Search_Click" Margin="5,0,0,0"/>
+                <Separator Margin="5,0"/>
+                <Button Content="{x:Static properties:Resources.Refresh}" Click="Refresh_Click" Margin="2,0"/>
+                <Button Content="{x:Static properties:Resources.OpenDownloadFolder}" Click="OpenDownloadFolder_Click" Margin="2,0"/>
+                <Separator Margin="5,0"/>
+                <Button Content="{x:Static properties:Resources.DownloadSettings}" Click="Settings_Click" Margin="2,0"/>
+            </StackPanel>
         </Grid>
 
         <!-- Download List -->
